# $Id$

2006-07-12	Konstantin V. Arkhipov
	
	* core/Form/Form.class.php: markCustom() added, as requested by
	dedmajor.

	* core/Form/Form.class.php: API breakage: getTexturalErrors() ->
	getTextualErrors(); typo spotted by dedmajor.

2006-07-11	Konstantin V. Arkhipov

	* ext/: StaticFactory, Enumeration, Prototyped, FieldTable, Query,
	QueryIdentification and ImaginaryDialect are implemented.

2006-07-08	Konstantin V. Arkhipov

	* ext/src/main/DAOs/Handlers/SharedMemorySegmentHandler.c: implemented
	finally.

2006-07-07	Konstantin V. Arkhipov

	* core/Form/FormUtils.class.php: null's handling are now optional, as
	requested by nk.

2006-07-01	Konstantin V. Arkhipov

	* ext/: SegmentHandler interface implemented.

2006-06-30	Konstantin V. Arkhipov

	* core/OSQL/SelectField.class.php: now supports any instance of
	DialectString as field.

2006-06-29	Konstantin V. Arkhipov

	* meta/builders/ContainerClassBuilder.class.php: naming of
	container's classes changed to avoid collisions with two or more
	self-collected ones.

2006-06-28	Konstantin V. Arkhipov

	* main/DAOs/ObjectQuery.class.php: final class now.

	* meta/builders/ProtoClassBuilder.class.php: deprecated getForm()
	dropped.

	* main/Utils/RussianTextUtils.class.php: deprecated getSuffix()
	dropped.

	* main/DAOs/Handlers/: segment's handling logic separated from
	DAO-workers.

	* src/core/DB/Dialect.c: declarations of timeZone() and
	dropTableMode() corrected.

	* main/DAOs/: sub-directories for Workers and upcoming Handlers
	introduced.

2006-06-27	Konstantin V. Arkhipov

	* ext/: php's extension moved from incubator.

2006-06-27	Anton E. Lebedevich

	* core/OSQL/SelectQuery.class.php: GroupBy class dropped.

2006-06-25	Konstantin V. Arkhipov

	* main/Containers/: sub-directories for Storable and Unified
	containers introduced.

	* core/Base/Timestamp.class.php: extended support of malformed dates,
	normalization introduced for such cases.
